# qr-drop

./: README.md
.github/workflows/: run_tests.yml
backend/: .env.example  package.json  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/views/: __init__.py  create_session.py  home.py  router.py  websocket.py
backend/config/: settings.toml
backend/tests/: conftest.py  test_main.py  test_websocket.py
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
frontend/src/components/: Footer.vue  MessageInput.vue  MessageList.vue  QRComponent.vue
frontend/src/constants/: config.ts  enums.ts  strings.ts  types.ts
frontend/src/router/: index.ts
frontend/src/views/: ChatView.vue  HomeView.vue
