[project]
name = "qr-drop-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.12",
    "fastapi[standard]>=0.135.1",
    "pyyaml>=6.0.3",
    "ua-parser>=1.0.1",
    "user-agents>=2.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
